# spidr

./: .gitignore  BEFORE_RELEASE  CONTRIBUTING.md  LICENSE  README.md  hubconf.py  pyproject.toml
.github/workflows/: lint.yml  release.yml
configs/: example.toml
paper/: extract_features.py  plot_figures.ipynb
paper/assets/: arpabet_to_tipa.json  paper.mplstyle  sonority_to_arpabet.json
paper/results/: abx-continuous.csv  abx-discrete.csv  map-continuous.csv  speed.csv  spoken-lm.csv  superb.csv  units-quality.csv
src/spidr/: __main__.py  checkpoint.py  config.py  environment.py  slurm.py  train.py  validate.py
src/spidr/data/: dataset.py
src/spidr/models/: __init__.py  components.py  dinosr.py  metrics.py  spidr.py  utils.py
src/spidr/tools/: metrics_queue.py  profiler.py
